# tupal

./: CMakeLists.txt  README.MD
.github/workflows/: cmake-multi-platform.yml
script/: make-test-data.sh
src/: CMakeLists.txt  json_helper.hh  manager.cc  manager.hh  model.cc  model.hh  tupald.cc
test/: CMakeLists.txt  model_test.cc  rest_test.cc  test_competition_class_manager.cc  test_competition_manager.cc  test_competitor_manager.cc  test_hello_doctest.cc  test_start_group_manager.cc
web/: index.html  openapi.yaml  swagger.html
